--- a/style.css
+++ b/style.css
@@ -2,10 +2,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 15px auto;
+    border: 2px solid black;
+    max-width: 600px;
+    border-radius: 20px;
+    padding: 40px;
 }
 
 h1 {
-    margin: 30px 0 10px;
+    margin: 10px 0 10px;
 }
 
 h3 {
